--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,12 +4,29 @@ body{
      background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
      height: 100vh;
      width: 100vw;
-   
+     
 
 }
 ul li{
     text-decoration: none;
     color: black;
-    font-size: 15px;
+    font-size: 30px;
+    line-height: 35px;
+}
+
+.main{
+    position: relative;
+    width: 100vh;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+main__list{
+    width: 50%;
+    height: 50%;
+    position: absolute;
+    top: 30%;
 }
 
