--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
   width: 100vw;
 }
 
+h1 {
+  top: 0;
+}
+
 ul li {
   text-decoration: none;
   color: black;
@@ -20,14 +24,27 @@ ul li {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
 }
 
-main__list {
+.main__list {
   width: 50%;
   height: 50%;
   position: absolute;
   top: 30%;
+}
+.main__list li {
+  height: 35px;
+  width: 100%;
+}
+
+.item {
+  color: green;
+}
+
+.checked {
+  background-color: aqua;
+  color: red;
+  text-decoration: line-through;
 }
 
 /*# sourceMappingURL=style.css.map */
