--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,14 @@
 body {
+  padding: 0;
   margin: 0 auto;
   text-decoration: none;
   background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
-  height: 100vh;
-  width: 100vw;
 }
 
 ul li {
   text-decoration: none;
   color: black;
   font-size: 30px;
-  line-height: 35px;
 }
 
 .main {
@@ -23,10 +21,8 @@ ul li {
 }
 
 .main__list {
-  width: 50%;
-  height: 50%;
   position: absolute;
-  top: 30%;
+  top: 10%;
 }
 .main__list li {
   height: 35px;
@@ -35,11 +31,12 @@ ul li {
 
 .item {
   color: green;
+  padding: 10px;
 }
 
 .checked {
   background-color: aqua;
-  color: red;
+  color: rgba(255, 0, 0, 0.471);
   text-decoration: line-through;
 }
 
