--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,20 +1,16 @@
 body{
+    padding: 0;
     margin: 0 auto;
-     text-decoration: none;
-     background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
-     height: 100vh;
-     width: 100vw;
-     
-
+    text-decoration: none;
+    background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
 }
 
- 
 
 ul li{
     text-decoration: none;
     color: black;
     font-size: 30px;
-    line-height: 35px;
+    
 }
 
 .main{
@@ -24,13 +20,13 @@ ul li{
     display: flex;
     align-items: center;
     justify-content: center;
-    // flex-direction: column;
+  
 }
 .main__list{
-    width: 50%;
-    height: 50%;
+    
     position: absolute;
-    top: 30%;
+    top: 10%;
+   
     & li{
         height: 35px;
         width: 100%;
@@ -39,11 +35,12 @@ ul li{
 
 .item{
     color:green;
+    padding: 10px;
 }
 
 .checked{
     background-color: aqua;
-    color:red;
+    color:rgba(255, 0, 0, 0.471);
     text-decoration: line-through;
 }
 
