--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,6 @@
+
+
+
 body{
     padding: 0;
     margin: 0 auto;
@@ -15,8 +18,7 @@ ul li{
 
 .main{
     position: relative;
-    width: 100vh;
-    height: 100vh;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,10 +28,15 @@ ul li{
     
     position: absolute;
     top: 10%;
+   &--item{
+    margin: 0;
+    padding: 0;
+   }
    
     & li{
         height: 35px;
         width: 100%;
+        list-style: none;
     }
 }
 
